# OrderSystem

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
order_system/: manage.py
order_system/order_system/: settings.py  urls.py  wsgi.py
