[metadata]
name = order_system
summary = order system
author = zhonghe
home-page = http://www.pigpig.ren
description-file = 
    README.rst
    CHANGES.rst
classifier = 
    Development Status :: 5 - Production/Stable,
    Environment :: Console,
    Framework :: Django,
    Intended Audience :: Infomation Technology,
    Intended Audience :: System Administrators,
    Intended Audience :: Telecommunications Industry,
    License :: OSI Approved :: Apache Software License,
    Programming Language :: Python :: 3.5,
    Programming Language :: Python :: 3.4,
    Programming Language :: Python :: 2.7,
    Topic :: System :: Monitoring,
    
[files]
packages = 
    order_system
data_files = 
    /etc/order_system/ = etc/xxx1
    /etc/order_system/ = etc/xxx2
    /etc/order_system/ = etc/xxx3

[wheel]
universal = 1
